# grcp-rs-example

./: Cargo.toml  README.md
proto/: Cargo.toml  build.rs  build.sh  testing.desc
proto/src/: lib.rs
src/: lib.rs
