[package]
name = "grpcio_example"
version = "0.1.0"
authors = ["toidiu"]
license = "Apache-2.0"
keywords = ["grpc", "protobuf", "rpc", "tls", "http2"]
repository = "https://github.com/todidiu/grpcio-example"
readme = "README.md"
homepage = "https://github.com/todidiu/grpcio-example"
description = "An example of using the grpcio crate."
categories = ["asynchronous", "network-programming"]

[workspace]
members = ["proto"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
grpcio-sys = "0.2.0"
grpcio = "0.2.0"
libc = "0.2"
futures = "^0.1.15"
protobuf = { version = "1.2", optional = true }
log = "0.3"
grpcio-proto = { path = "proto", version = "0.1.0" }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.3"
slog = "2.0"
slog-async = "2.1"
slog-stdlog = "3.0"
slog-scope = "4.0"
slog-term = "2.2"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf"]
secure = ["grpcio-sys/secure"]

[[bin]]
name = "greeter_client"
path = "src/bin/client.rs"

[[bin]]
name = "greeter_server"
path = "src/bin/server.rs"

[profile.release]
debug = true

