[package]
name = "grpcio-proto"

version = "0.1.0"
authors = ["toidiu"]
license = "Apache-2.0"
keywords = ["grpc", "proto"]
repository = "https://github.com/todidiu/grpcio-example"
readme = "README.md"
homepage = "https://github.com/todidiu/grpcio-example"
description = "Public proto files for grpcio-example."
categories = ["network-programming"]

build = "build.rs"

[dependencies]
protobuf = "1.2"
futures = "0.1"
grpcio = { version = "0.2.0", features = ["secure"] }

[build-dependencies]
protobuf = "1.2"
grpcio-compiler = { version = "0.2.0" }
